# AgentIM

./: .gitignore  AGENTS.md  README.md  pom.xml
.claude/: settings.local.json
.omx/: metrics.json
.omx/logs/: omx-2026-05-04.jsonl  omx-2026-05-05.jsonl  omx-2026-05-06.jsonl  omx-2026-05-07.jsonl  omx-2026-05-08.jsonl  omx-2026-05-09.jsonl  omx-2026-05-10.jsonl  omx-2026-05-11.jsonl  omx-2026-05-12.jsonl  omx-2026-05-14.jsonl  omx-2026-05-15.jsonl  omx-2026-05-16.jsonl  omx-2026-05-17.jsonl  tmux-hook-2026-05-04.jsonl  tmux-hook-2026-05-05.jsonl  tmux-hook-2026-05-06.jsonl  tmux-hook-2026-05-07.jsonl  tmux-hook-2026-05-08.jsonl  tmux-hook-2026-05-09.jsonl  tmux-hook-2026-05-10.jsonl  tmux-hook-2026-05-11.jsonl  tmux-hook-2026-05-12.jsonl  tmux-hook-2026-05-14.jsonl  tmux-hook-2026-05-15.jsonl  tmux-hook-2026-05-16.jsonl  (+14 more)
.run/: ruoyi-auth.run.xml  ruoyi-gateway.run.xml  ruoyi-gen.run.xml  ruoyi-job.run.xml  ruoyi-monitor.run.xml  ruoyi-nacos.run.xml  ruoyi-resource.run.xml  ruoyi-seata-server.run.xml  ruoyi-snailjob-server.run.xml  ruoyi-system.run.xml  ruoyi-workflow.run.xml
AgentIM-Business/: Dockerfile  pom.xml
AgentIM-api/: pom.xml
AgentIM-auth/: Dockerfile  pom.xml
AgentIM-common/: pom.xml
AgentIM-desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
AgentIM-desktop/src-tauri/: Cargo.toml  tauri.conf.json
AgentIM-desktop/src-tauri/capabilities/: default.json
AgentIM-desktop/src-tauri/src/: lib.rs  main.rs
AgentIM-gateway/: Dockerfile  pom.xml
AgentIM_Docs/: 00_阅读说明.md
(+310 files in other folders)
