[package]
name = "agentim-desktop"
version = "0.1.0"
description = "AgentIM P0 Windows desktop client"
authors = ["AgentIM"]
edition = "2021"

[lib]
name = "agentim_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
tauri-plugin-http = "2.5.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
